add swagger create,destroy
