# swagger/v1/swagger.yaml
@@ -385,6 +385,24 @@ paths:
       produces:
       - "application/json"
       parameters:
+      - in: "header"
+        name: "access-token"
+        description: "access-token"
+        required: false
+        type: "string"
+        example: ""
+      - in: "header"
+        name: "uid"
+        description: "uid(email)"
+        required: false
+        type: "string"
+        example: ""
+      - in: "header"
+        name: "client"
+        description: "client"
+        required: false
+        type: "string"
+        example: ""
       - in: "body"
         name: "log in"
         description: "email/passwordによりlogin"
@@ -397,7 +415,7 @@ paths:
               example: "test2@example.com"
             password:
               type: "string"
-              example: "pasword"
+              example: "password"
       responses:
         200:
           description: "成功時のレスポンス"
@@ -1912,6 +1930,139 @@ paths:
               data:
                 type: ""
                 example: ""
+      security:
+      - access-token: 
+        uid:
+        client:
+  /favorite/:
+    post:
+      tags:
+      - "favorite"
+      summary: "Jobに対して、current_userからfavoriteを登録する"
+      description: "jobとuserの中間テーブル。current_userからjobに対していいねをする"
+      operationId: "favorite#create"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "path"
+        name: "job_id"
+        description: "hobのid"
+        required: true
+      responses:
+        201:
+          description: "成功時のレスポンス"
+          schema:
+            type: "object"
+            properties:
+              status:
+                type: "integer"
+                example: 201
+              message:
+                type: "string"
+                example: "Created favorite"
+              data:
+                type: "object"
+                properties:
+                  id:
+                    type: "integer"
+                    example: 1
+                  job_id:
+                    type: "integer"
+                    example: 3
+                  user_id:
+                    type: "integer"
+                    example: 2
+                  created_at:
+                    type: "integer"
+                    example: "2019-06-01T12:01:22.868Z"
+                  updated_at:
+                    type: "integer"
+                    example: "2019-06-01T12:01:22.929Z"
+        400:
+          description: "Jobが存在しない場合のレスポンス"
+          schema:
+            type: "object"
+            properties:
+              status:
+                type: integer
+                example: 400
+              message:
+                type: string
+                example: "Bad Request"
+              data:
+                type: "array"
+                items:
+                  type: "string"
+                  example: "Job must exist"
+      security:
+      - access-token: 
+        uid:
+        client:
+  /favorite/{favorite_id}:
+    delete:
+      tags:
+      - "favorite"
+      summary: "favoriteを削除する"
+      description: "userとjobの関連付けを削除"
+      operationId: "favorite#destroy"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - in: "path"
+        name: "favorite_id"
+        description: "favoriteのid"
+        required: true
+      responses:
+        200:
+          description: "成功時のレスポンス"
+          schema:
+            type: "object"
+            properties:
+              status:
+                type: "integer"
+                example: 200
+              message:
+                type: "string"
+                example: "Success Favorite"
+              data:
+                type: "object"
+                properties:
+                  id:
+                    type: "integer"
+                    example: 1
+                  user_id:
+                    type: "integer"
+                    example: 3
+                  job_id:
+                    type: "integer"
+                    example: 3
+                  created_at:
+                    type: "integer"
+                    example: "2019-06-01T12:01:22.868Z"
+                  updated_at:
+                    type: "integer"
+                    example: "2019-06-01T12:01:22.929Z"
+        404:
+          description: "favoriteが実在しない時のレスポンス"
+          schema:
+            type: "object"
+            properties:
+              status:
+                type: integer
+                example: 404
+              message:
+                type: string
+                example: "NilClass Not Found"
+              data:
+                type: ""
+                example: null
+              notes:
+                type: "string"
+                example: "favorite is not found"
       security:
       - access-token: 
         uid:
